@@ -1,4 +1,4 @@
-/* Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+/* Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,16 +31,9 @@ import static org.testng.Assert.*;
 import test.jextract.packedstructs.*;
 
 /*
- * @test id=classes
+ * @test
  * @library /lib
  * @run main/othervm JtregJextract -t test.jextract.packedstructs packedstructs.h
- * @build TestPackedStructs
- * @run testng/othervm --enable-native-access=ALL-UNNAMED TestPackedStructs
- */
-/*
- * @test id=sources
- * @library /lib
- * @run main/othervm JtregJextractSources -t test.jextract.packedstructs packedstructs.h
  * @build TestPackedStructs
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestPackedStructs
  */
