@@ -30,20 +30,11 @@ import static test.jextract.test8245003.test8245003_h.*;
 import static java.lang.foreign.Linker.*;
 
 /*
- * @test id=classes
+ * @test
  * @bug 8245003
  * @summary jextract does not generate accessor for MemorySegement typed values
  * @library /lib
  * @run main/othervm JtregJextract -l Test8245003 -t test.jextract.test8245003 test8245003.h
- * @build Test8245003
- * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8245003
- */
-/*
- * @test id=sources
- * @bug 8245003
- * @summary jextract does not generate accessor for MemorySegement typed values
- * @library /lib
- * @run main/othervm JtregJextractSources -l Test8245003 -t test.jextract.test8245003 test8245003.h
  * @build Test8245003
  * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8245003
  */
