@@ -28,20 +28,11 @@ import static org.testng.Assert.assertTrue;
 import static test.jextract.testLinkageErrors.testLinkageErrors_h.*;
 
 /*
- * @test id=classes
+ * @test
  * @bug 8259473
  * @summary jextract generated code should throw exception for unfound native symbols from calls, variable access, set immediately
  * @library /lib
  * @run main/othervm JtregJextract -t test.jextract.testLinkageErrors testLinkageErrors.h
- * @build TestLinkageErrors
- * @run testng/othervm --enable-native-access=ALL-UNNAMED TestLinkageErrors
- */
-/*
- * @test id=sources
- * @bug 8259473
- * @summary jextract generated code should throw exception for unfound native symbols from calls, variable access, set immediately
- * @library /lib
- * @run main/othervm JtregJextractSources -t test.jextract.testLinkageErrors testLinkageErrors.h
  * @build TestLinkageErrors
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestLinkageErrors
  */
